Support for untitled uri.
Signed-off-by: azerr <azerr@redhat.com>